minor change in parts/

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,9 @@ dist
 
 # TernJS port file
 .tern-port
+
+
+Denis-Khranovskiy-lead-backend-eng.aux
+Denis-Khranovskiy-lead-backend-eng.log
+Denis-Khranovskiy-lead-backend-eng.out
+Denis-Khranovskiy-lead-backend-eng.pdf
